--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="container">
             <h3 class="h2">{{ 'à propos de moi' | translate }}</h3>
 
-            <p class="text-30">J'ai 25 ans </p>
+            <p class="text-30">{{ 'J'ai 26 ans' | translate }}</p>
 
             <p class="text-30">Et je suis passionné par l'informatique </p>
             <hr class="separator"/>
             <div class="row push-top-lg push-bottom-lg">
-                <p class="text-xxl">Je fus longtemps passionné par les mathématique avant de m'orienter dans le domaine
+                <p class="text-xxl">Je fus longtemps passionné par les mathématiques avant de m'orienter dans le domaine
                     informatique </p>
 
                 <p class="text-xxl"> .... </p>
@@ -116,7 +116,7 @@
             <p class="text-xxl"></p>
 
             <div class="well text-xl push-top">
-                Apreçu des compétences.
+                {{ 'Aperçu des compétences' | translate }}
             </div>
             <div class="row text-left">
                 <div class="col-sm-8 hidden-xs">
