--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="text-30">Et je suis passionné par l'informatique </p>
             <hr class="separator"/>
             <div class="row push-top-lg push-bottom-lg">
-                <p class="text-xxl">Je fus longtemps passionné par les mathématique avant de m'orienter dans le domaine
+                <p class="text-xxl">Je fus longtemps passionné par les mathématiques avant de m'orienter dans le domaine
                     informatique </p>
 
                 <p class="text-xxl"> .... </p>
@@ -116,7 +116,7 @@
             <p class="text-xxl"></p>
 
             <div class="well text-xl push-top">
-                Apreçu des compétences.
+                Aperçu des compétences.
             </div>
             <div class="row text-left">
                 <div class="col-sm-8 hidden-xs">
@@ -198,7 +198,7 @@
                         <h4>Stage de fin d'études</h4>
 
                         <div class="timeline-text">Stage de fin d'études chez Capgemini, qui porte sur l'intégration
-                            d'un CRM Siebel pour un opérateur télécom
+                            du CRM Siebel pour un opérateur télécom
                             <Capgemini></Capgemini>
                         </div>
                     </div>
